<resources>
    <string name="app_name">Desa Cenrana Baru</string>
    <string name="all_right_reserved">KKN UINAM ANGK. 61, DESA CENRANA BARU KABUPATEN MAROS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_data">Belum ada data</string>
    <string name="profil_desa">Profil Desa</string>
    <string name="proker">Program Kerja</string>
    <string name="add_proker">Tambah Program Kerja</string>
    <string name="add_wisata">Tambah Objek Wisata</string>
    <string name="username">Username</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="buat">Buat</string>
    <string name="simpan">Simpan</string>
    <string name="loginHeader">Silahkan Masuk</string>
    <string name="text_desc_app">KKN UIN ALAUDDIN MAKASSAR ANGKATAN 61</string>

    <string name="namaKegiatan">Nama Kegiatan</string>
    <string name="namaWisata">Nama Objek Wisata</string>
    <string name="tanggal">Tanggal</string>
    <string name="desc">Deskripsi</string>
    <string name="foto">Foto</string>

    <string name="et_format_tanggal">dd/mm/yyyy</string>

    <string name="google_maps_key">AIzaSyDTIvPOsKEL7z6wBmQak9ggvVcvwaWUmVQ</string>
    <string name="lokasi">Lokasi</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="detail_program_kerja">Detail Program Kerja</string>
    <string name="detail_wisata">Detail Objek Wisata</string>
    <string name="lokasi_desa_cenrana_baru">Lokasi Desa Cenrana Baru</string>
    <string name="visi_dan_misi">Visi dan Misi</string>
    <string name="misi">Misi</string>
    <string name="visi">Visi</string>
    <string name="objek_wisata">Objek Wisata</string>
    <string name="nama_program">Nama Program :</string>
    <string name="tanggal2">Tanggal :</string>
    <string name="deskripsi2">Deskripsi :</string>
    <string name="foto2">Foto :</string>
    <string name="nama_objek_wisata">Nama Objek Wisata :</string>
    <string name="foto_wisata">Foto Wisata :</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="batal">Batal</string>
    <string name="struktur_desa">Struktur Desa</string>
    <string name="nama_kepala_desa">Nama Kepala Desa</string>
    <string name="kontak_kepala_desa">Kontak Kepala Desa</string>
    <string name="edit_struktur_desa">Edit Struktur Desa</string>
</resources>
