<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/margin_standard">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="@dimen/width150"
        android:layout_height="@dimen/width150"
        android:layout_marginBottom="@dimen/margin_standard"
        android:background="@drawable/gradient_radius_primary"
        android:elevation="@dimen/margin_standard"
        android:padding="@dimen/margin_standard"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginHeader"
        style="@style/textBigWhite"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:id="@+id/textTitle"
        android:layout_marginTop="@dimen/margin_big"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUser"
        style="@style/customEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/gray2"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        android:layout_marginTop="@dimen/margin_standard"
        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/textStandardWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:imeOptions="actionNext"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPass"
        style="@style/customEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kata_sandi"
        android:textColorHint="@color/gray2"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/textStandardWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="@color/colorBlack"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.exomatik.desacenranabaru.service.AviLoading.AVLoadingIndicatorView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="LineScaleIndicator"
        android:id="@+id/progress"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard_big"
        android:padding="@dimen/margin_standard_big"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        />
</androidx.appcompat.widget.LinearLayoutCompat>