<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/putihGelap5"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="@dimen/width150"
        android:layout_height="@dimen/width150"
        android:src="@drawable/logo"
        android:background="@drawable/gradient_radius_primary"
        android:scaleType="centerCrop"
        android:padding="@dimen/margin_standard"
        android:elevation="@dimen/margin_standard"
        android:layout_centerHorizontal="true"
        android:id="@+id/imgLogo"
        android:layout_marginTop="@dimen/margin_standard"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/putihAsli"
        app:cardCornerRadius="@dimen/margin_standard"
        app:cardElevation="@dimen/margin_standard"
        android:layout_margin="@dimen/margin_standard"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgLogo"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_standard"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visi_dan_misi"
                style="@style/textBigWhite"
                android:textColor="@color/colorBlack"
                android:layout_centerHorizontal="true"
                android:id="@+id/textTitle"
                />
            <com.exomatik.desacenranabaru.service.AviLoading.AVLoadingIndicatorView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textTitle"
                android:layout_marginTop="@dimen/margin_standard"
                app:indicatorColor="@color/colorPrimary"
                app:indicatorName="LineScaleIndicator"
                android:id="@+id/progress"
                android:visibility="gone"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                style="@style/textStandardWhite"
                android:layout_below="@+id/textTitle"
                android:textColor="@color/gray1"
                android:layout_centerHorizontal="true"
                android:id="@+id/textNoData"
                android:visibility="gone"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etVisi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_below="@+id/progress"
                android:layout_height="wrap_content"
                android:hint="@string/visi"
                android:textColorHint="@color/gray2"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_marginTop="@dimen/margin_standard"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:imeOptions="actionNext"
                    android:lines="5"
                    android:maxLines="5"
                    android:gravity="start"
                    android:enabled="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etMisi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_below="@+id/etVisi"
                android:layout_height="wrap_content"
                android:hint="@string/misi"
                android:textColorHint="@color/gray2"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_marginTop="@dimen/margin_standard"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:imeOptions="actionNext"
                    android:lines="5"
                    android:maxLines="5"
                    android:gravity="start"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard_big"
                android:padding="@dimen/margin_standard_big"
                android:text="@string/simpan"
                android:textColor="@color/colorWhite"
                android:layout_below="@+id/etMisi"
                android:visibility="gone"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>