<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/margin_small"
            android:id="@+id/rlTop"
            android:background="@drawable/radius_bottom_gradient"
            >

            <ImageButton
                android:id="@+id/imgBack"
                android:layout_width="@dimen/width30"
                android:layout_height="@dimen/width30"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/width30"
                android:background="@drawable/border_circle_transparent_gray"
                android:src="@drawable/ic_arrow_white" />

            <ImageButton
                android:id="@+id/imgHapus"
                android:layout_width="@dimen/width30"
                android:layout_height="@dimen/width30"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/width30"
                android:background="@drawable/border_circle_transparent_gray"
                android:src="@drawable/ic_delete_red"
                android:visibility="gone"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/imgBack"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="@dimen/width40"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_standard_big" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_big"
                    android:textStyle="bold"
                    android:fontFamily="@font/open_sans"
                    android:id="@+id/textTujuan"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/text_big"
                    android:layout_marginBottom="@dimen/margin_standard_big"
                    android:text="@string/detail_program_kerja"
                    />

            </LinearLayout>
        </RelativeLayout>
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/putihAsli"
            android:layout_below="@+id/map"
            android:padding="@dimen/margin_standard"
            android:id="@+id/rl_bottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_pr"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:text="@string/nama_program"
                android:layout_marginTop="@dimen/margin_small"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_nama"
                android:layout_toRightOf="@+id/text_pr"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/margin_small"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_lc"
                android:layout_below="@+id/text_nama"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:text="@string/tanggal2"
                android:layout_marginTop="@dimen/margin_small"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_tanggal"
                android:layout_below="@+id/text_nama"
                android:layout_toRightOf="@+id/text_lc"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/margin_small"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_al"
                android:layout_below="@+id/text_tanggal"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:text="@string/deskripsi2"
                android:layout_marginTop="@dimen/margin_small"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_desc"
                android:layout_below="@+id/text_tanggal"
                android:layout_toRightOf="@+id/text_al"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/margin_small"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_a5"
                android:layout_below="@+id/text_desc"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:text="@string/foto2"
                android:layout_marginTop="@dimen/margin_small"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_a5"
                android:layout_centerHorizontal="true"
                android:id="@+id/imgFoto"
                android:scaleType="fitXY"
                />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
